vlib/v/checker/tests/assign_expr_undefined_err_b.vv
fn main() {
	a, b := a, b
	println('$a, $b')
}
